// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test artwork queries should find an artwork by id 1`] = `
Object {
  "data": Object {
    "findArtwork": Object {
      "title": "amazingsongT1itle",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork queries should not find an artwork by id and throw an error 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Couldn't find an artwork with id 'abc'],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork queries should query both auctions and fixed 1`] = `
Object {
  "data": Object {
    "listArtworks": Array [
      Object {
        "handle": "4",
        "saleType": "fixed",
      },
      Object {
        "handle": "5",
        "saleType": "fixed",
      },
      Object {
        "handle": "art 1",
        "saleType": "auction",
      },
      Object {
        "handle": "1",
        "saleType": "auction",
      },
      Object {
        "handle": "2",
        "saleType": "auction",
      },
      Object {
        "handle": "3",
        "saleType": "auction",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork queries should query only auctions  1`] = `
Object {
  "data": Object {
    "listArtworks": Array [
      Object {
        "handle": "3",
        "saleType": "auction",
      },
      Object {
        "handle": "2",
        "saleType": "auction",
      },
      Object {
        "handle": "1",
        "saleType": "auction",
      },
      Object {
        "handle": "art 1",
        "saleType": "auction",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork queries should query only fixed sales  1`] = `
Object {
  "data": Object {
    "listArtworks": Array [
      Object {
        "handle": "5",
        "saleType": "fixed",
      },
      Object {
        "handle": "4",
        "saleType": "fixed",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork queries should query only fixed sales that are listed  1`] = `
Object {
  "data": Object {
    "listArtworks": Array [
      Object {
        "handle": "5",
        "saleType": "fixed",
      },
      Object {
        "handle": "4",
        "saleType": "fixed",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
